# declaraciones-feuc

./: .flake8  .gitignore  Procfile  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/.workflows/: ci.yml
.github/workflows/: ci.yml  stale.yml
config/: gunicorn.conf.py  nginx.conf.erb
declaraciones_feuc/: app.py  auth.py  declaraciones.py  model.py  schema.sql
declaraciones_feuc/static/: styles.css  upload.js
declaraciones_feuc/templates/: 403.html  404.html  500.html  admin.html  declaraciones.html  home.html  layout.html  members.html  organizacion.html  organization.html  representatives.html  settings.html
js/: upload.js
tests/: test_declaraciones.py  test_declaraciones_feuc.py
