[tool.poetry]
name = "declaraciones-feuc"
version = "0.1.0"
description = ""
authors = ["Agustín Covarrubias <agucova@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
flask_sqlalchemy = "^2.4.3"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"
pytest-cov = "^2.9.0"
pytest-flask = "^1.0.0"
pytest-xdist = "^1.32.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
